# drf_chart_of_account

./: .coverage  .coveragerc  .gitignore  .rstcheck.cfg  LICENSE  MANIFEST.in  README.rst  db.sqlite3  manage.py  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
drf_chart_of_account/: admin.py  apps.py  asgi.py  configs.py  models.py  queries.py  scripts.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
drf_chart_of_account/fixtures/: fixture_layer_five_model.json  fixture_layer_four_model.json  fixture_layer_one_model.json  fixture_layer_three_model.json  fixture_layer_two_model.json
drf_chart_of_account/migrations/: 0001_initial.py  0002_auto_20201011_0721.py  0002_auto_20201015_1633.py  0002_auto_20201015_1803.py  0002_layerfivemodel_layerfourmodel_layerthreemodel.py  0002_layeronemodel_serial_no.py  0003_auto_20201015_1646.py  0003_auto_20201015_1921.py  0004_auto_20201015_1709.py  0004_auto_20201015_1923.py  0005_auto_20201015_1732.py  0005_auto_20201015_1923.py  0006_auto_20201015_1923.py  0007_auto_20201015_1923.py  0008_auto_20201015_1923.py  0009_auto_20201015_1924.py  0010_auto_20201015_1924.py  0011_auto_20201015_1924.py  0012_auto_20201015_1924.py  0013_auto_20201015_1924.py  0014_auto_20201015_1925.py  0015_auto_20201015_1925.py  0016_auto_20201015_1925.py  0017_auto_20201015_1925.py  0018_auto_20201015_1925.py  0019_auto_20201016_1544.py  0020_auto_20201016_1544.py  0021_auto_20201016_1547.py  (+9 more)
drf_chart_of_account_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: settings.py
(+14 files in other folders)
