[metadata]
name = skooby-drf-chart-of-account
version = 1.0.0
description = A Django app to manage chart of accounts layers.
long_description = file: README.rst
url = https://github.com/skoobytechforimpact/drf_chart_of_account.git
author = Skooby Technology for Impact
author_email = pritom@idopia.co
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
[flake8]
ignore = E501
exclude =
    .git,
    __pycache__,
    old,
    build
